--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
     <title>Experience the Summit at Breckenridge!</title>
     <link href="https://fonts.googleapis.com/css?family=Amatic+SC|Raleway:100,200,300,400,500,600,700,800,900" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="./starting.css">
-    <link rel="stylesheet" type="text/css" href="./thesummit.css">
+    <link rel="stylesheet" type="text/css" href="./styles.css">
+    <link rel="stylesheet" type="text/css" href="./summit.css">
   </head>
 <body>
   <div class="navigation">
